<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">First_app</string>
    <string name="action_settings">Settings</string>
    <string name="Game_name">Citadels</string>
    <string name="New_game">New Game</string>
    <string name="Settings">Settings</string>
    <string name="players_nubmer">Enter players number</string>
   
    <string name="pName">Имя игрока</string>
    <string name="builded">Зданий</string>       
    <string name="plans">Чертежи</string>       
    <string name="money">Денег</string>
    <string name="points">Очков</string>
    <string name="btnBack">Назад</string>
    
    <string name="takingTwoThousands">Беру 2 тысячи</string> 
    <string name="takingTwoPlans">Беру 2 чертежа</string>
    
    <string name="moneyAmount">На счету: </string>
    <string name="constructed">Построено</string>
    <string name="btnSpecial">Спец. возможность</string>
    <string name="btnOtherPlayers">Другие игроки</string>
	<string name="btnTurnEnd">Конец хода</string>
    
    <string name="tmp">Заглушка</string>       
    
</resources>
