<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/result_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tmp"
        android:gravity="center" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
        android:id="@+id/result_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/pName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pName"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/builded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/builded" />

        <TextView
            android:id="@+id/inHand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plans" />

        <TextView
            android:id="@+id/money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/money" />
        </TableRow>

    </TableLayout>

</LinearLayout>
